--- a/index.html
+++ b/index.html
@@ -21,12 +21,21 @@
         min=".1"
         max=".5"
         step=".01"
-        value=".15"
+        value=".2"
+      />
+      <p id='branch-length'></p>
+      <input
+        id="length-slider"
+        type="range"
+        min="4"
+        max="500"
+        step="1"
+        value="200"
       />
     </header>
 
     <canvas id="canvas"></canvas>
-
+    <p id='recursions'></p>
     <script src="./src/main.js" async defer></script>
   </body>
 </html>
